[package]
name = "authentame"
version = "0.1.0"
authors = ["michael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
jsonwebtoken = "7.1.0"
rust-argon2 = "0.8"
serde = {version = "1.0", features=["derive"]}
rand = "0.7"